[package]
name = "open_ports"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.31"
anyhow = "1.0.58"
rayon = "1.5.3"
trust-dns-resolver = "0.21.2"
serde = {version = "1.0.137", features = ["derive"]}
reqwest = {version = "0.11.11", default-features = false, features = ["json", "blocking", "rustls-tls"]}
